connection string fixed

--- a/ProjectII/ProiectII.WebAPI/appsettings.json
+++ b/ProjectII/ProiectII.WebAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=C:\\Users\\sergi\\OneDrive\\Desktop\\proiectgota\\ProjectII\\ProiectII.DataAccess.Sqlite\\sqlite.db"
+    "DefaultConnection": "Data Source=../ProiectII.DataAccess.Sqlite/sqlite.db"
   },
   "Logging": {
     "LogLevel": {
